# IIR_ws

./: .gitignore
install/: local_setup.sh  setup.sh
install/iir_base/share/ament_index/resource_index/package_run_dependencies/: iir_base
install/iir_base/share/ament_index/resource_index/parent_prefix_path/: iir_base
install/iir_base/share/iir_base/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/iir_base/share/iir_base/cmake/: iir_baseConfig.cmake
install/iir_base/share/iir_base/urdf/: iirbot.ros2_control.xacro  iirbot.urdf.xacro
log/: latest_build
src/IIR_base/: CMakeLists.txt  diff_drive_controller.xml  diffbot.xml  package.xml  readme.txt
src/IIR_base/config/: diffbot_controllers.yaml  ekf.yaml  gz_ros_bridge.yaml
src/IIR_base/launch/: diffbot.launch.py
src/IIR_base/src/config/: diffbot_controllers.yaml
src/IIR_base/src/launch/: diffbot.launch.py  view_robot.launch.py
src/IIR_base/src/scripts/: tf2_publish.py
src/IIR_base/src/urdf/: iir_description.urdf.xacro  iirbot.ros2_control.xacro
src/IIR_base/urdf/: iir_description.urdf.xacro  iirbot.ros2_control.xacro  real.urdf
src/diff_drive_controller/: CMakeLists.txt
src/iir_base/: CMakeLists.txt  package.xml
src/iir_base/src/urdf/: iir_description.urdf.xacro  iirbot.urdf.xacro  real.urdf
src/iir_nav2/: CMakeLists.txt  README.md  package.xml
src/iir_nav2/launch/: bringup_launch.py  cloned_multi_tb3_simulation_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  tb3_loopback_simulation.launch.py  tb3_simulation_launch.py  tb4_loopback_simulation.launch.py  tb4_simulation_launch.py  unique_multi_tb3_simulation_launch.py
src/iir_nav2/params/: nav2_params.yaml  oldnav2_params.yaml
src/iir_sim/: CMakeLists.txt  package.xml
src/iir_sim/launch/: iir_sim.launch.py
