<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iir_base</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lucashorsman@gmail.com">riplab</maintainer>
  <license>TODO: License declaration</license>

  <depend>backward_ros</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>ros2_control</depend>
  <depend>controller_interface</depend>
  <depend>diff_drive_controller</depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
